--- a/TMessagesProj/build.gradle
+++ b/TMessagesProj/build.gradle
@@ -1,11 +1,22 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.appspector.sdk'
 
 repositories {
     mavenCentral()
+
+    maven {
+        url appspectorMavenRep
+    }
 }
 
-configurations {
-    compile.exclude module: 'support-v4'
+configurations.all {
+    resolutionStrategy {
+        force 'com.android.support:support-core-ui:25.3.1'
+        force 'com.android.support:support-compat:25.3.1'
+        force 'com.android.support:support-core-utils:25.3.1'
+        force 'com.android.support:support-v13:25.3.1'
+        force 'com.android.support:palette-v7:25.3.1'
+    }
 }
 
 dependencies {
@@ -22,12 +33,13 @@ dependencies {
     compile 'net.hockeyapp.android:HockeySDK:4.1.3'
     compile 'com.googlecode.mp4parser:isoparser:1.0.6'
     compile 'com.stripe:stripe-android:2.0.2'
+    implementation "com.appspector:android-sdk:$rootProject.appspectorVersion"
+    implementation "com.android.support:multidex:1.0.3"
 }
 
 android {
     compileSdkVersion 27
     buildToolsVersion '27.0.3'
-
 
     useLibrary 'org.apache.http.legacy'
     defaultConfig.applicationId = "org.verysampletelegram.messenger"
@@ -100,22 +112,28 @@ android {
         manifest.srcFile 'config/foss/AndroidManifest.xml'
     }
 
-    flavorDimensions "minApi"
+    flavorDimensions "minApi", "appSpector"
 
     productFlavors {
         x86 {
+            dimension "minApi"
+
             ndk {
                 abiFilter "x86"
             }
             versionCode = 2
         }
         armv7 {
+            dimension "minApi"
+
             ndk {
                 abiFilter "armeabi-v7a"
             }
             versionCode = 1
         }
         x86_SDK23 {
+            dimension "minApi"
+
             ndk {
                 abiFilter "x86"
             }
@@ -129,6 +147,8 @@ android {
             versionCode = 4
         }
         armv7_SDK23 {
+            dimension "minApi"
+
             ndk {
                 abiFilter "armeabi-v7a"
             }
@@ -142,6 +162,8 @@ android {
             versionCode = 3
         }
         fat {
+            dimension "minApi"
+
             sourceSets.debug {
                 manifest.srcFile 'config/debug/AndroidManifest_SDK23.xml'
             }
@@ -149,6 +171,15 @@ android {
                 manifest.srcFile 'config/release/AndroidManifest_SDK23.xml'
             }
             versionCode = 5
+        }
+
+        appSpector {
+            dimension "appSpector"
+
+            applicationIdSuffix = rootProject.appspectorAppId
+            versionCode rootProject.appspectorVersionCode
+            versionName "4.6.0-$rootProject.appspectorVersionName"
+            buildConfigField "String", "APPSPECTOR_API_KEY", "\"$rootProject.appspectorDefaultApiKey\""
         }
     }
 
@@ -168,6 +199,7 @@ android {
         minSdkVersion 16
         targetSdkVersion 27
         versionName "4.6.0"
+        multiDexEnabled true
 
         externalNativeBuild {
             ndkBuild {
