--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,35 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+
 buildscript {
+
+    apply from: 'appspector.gradle'
+
     repositories {
         jcenter()
-        mavenCentral()
+
+        maven {
+            url appspectorMavenRep
+        }
+
         google()
     }
+
     dependencies {
         classpath 'com.android.tools.build:gradle:3.1.2'
-        classpath 'com.google.gms:google-services:3.1.1'
+        classpath 'com.google.gms:google-services:3.3.1'
+        classpath "com.appspector:android-sdk-plugin:$appspectorVersion"
     }
 }
-repositories {
-    google()
+
+allprojects {
+    repositories {
+        jcenter()
+
+        maven {
+            url 'https://maven.google.com/'
+            name 'Google'
+        }
+
+        google()
+    }
 }
