--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2
 jobs:
   build:
       docker:
-        - image: circleci/android:api-27-alpha
+        - image: lakoo/android-ndk:26-27.0.3-r17
       working_directory: ~/code
       environment:
         JVM_OPTS: -Xmx3200m
